Remove Internal Event Dispatcher (#49)
- Remove the SearchEventDispatcher and all associated events
- Make Cell record
- Handle path searches directly on platform's (Paper's) available async threads rather than dedicated ones
- Animate only the "success" candidates, now with stained-white glass
- Move animation logic to common library into new AnimationManager
- Move search completion logic to common library in SearchManager
- Return a Future from the SearchManager's in-game launch method
- Move "at surface" evaluation to common library using BlockProvider
- Only send debugging messages to console
- Removed DebugManager and handle debugging directly in logger class
- Cleaned-up extra player-specific class clutter
- Renamed PathTrial -> DestinationPathTrial and AbstractPathTrial -> PathTrial
- Removed unreleased DEDICATED_THREADS config setting
- Better debugging messages
- Changed logging prefix, inspired by Spark
- Better handling of canceled/failed cases in ItineraryTrial
- Better thread-safety